--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.8.2",
     "firebase-functions": "^4.1.1",
+    "flatted": "^3.2.7",
     "google-map-react": "^2.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
